--- a/ansible_templates/jenkins_worker_destroy.j2
+++ b/ansible_templates/jenkins_worker_destroy.j2
@@ -5,7 +5,7 @@ After=final.target
 [Service]
 Type=oneshot
 RemainAfterExit=true
-ExecStop=java -jar /home/ec2-user/jenkins-cli.jar -auth @/home/ec2-user/jenkins_auth -s http://{{ jenkins_master_private_ip }}:8080 delete-node {{ jenkins_worker_private_ip }}
+ExecStop=/bin/java -jar /home/ec2-user/jenkins-cli.jar -auth @/home/ec2-user/jenkins_auth -s http://{{ master_ip }}:8080 delete-node {{ worker_ip }}
 
 [Install]
 WantedBy=final.target
